UPDATE README
Aggiunta di una sezione 'Overview del Software' e aggiornamento delle istruzioni di installazione nel README.